backend/public/sell-item/style.css
body {
    background-color: var(--background);
    display: flex;
    flex-direction: column;
}

.container {
    margin: 100px auto;
    background-color: var(--card-bg);
    color: white;
    display: flex;
    flex-direction: column;
    border-radius: 20px;
    max-width: 800px;
}

form {
    display: flex;
    flex-direction: column;
}

.container form .title {
    margin: 20px;
    color: var(--text-primary);
    padding-top: 20px;
}

.container form .container-p {
    margin: 0px 20px 20px 20px;
    color: var(--text-secondary);
}

.container form .imgs {
    background-color: var(--background);
    margin: 30px;
    border-radius: 20px;
    padding-bottom: 20px;
}

.container form .imgs h3 {
    margin: 20px;
    color: var(--text-primary);
}

.container form .imgs p {
    margin: 20px;
    color: var(--text-secondary);
}

.container form .imgs .addimg input {
    display: none;
}

.container form .imgs .addimg {
    display: grid;
    grid-template-columns: auto auto auto;
    
}

.container form .imgs .addimg label {
    border: 2px dashed var(--input-border);
    margin: 5px;
    height: 150px;
    transition: .3s;
    border-radius: 10px;
    padding: 60px;
    color: var(--text-secondary);
    cursor: pointer;
    background-repeat: no-repeat;
    background-size: cover;
    position:relative;
}

.container form .imgs .addimg label:hover {
    outline: none;
    border-color: var(--accent);
}

.container form .product-information {
    background-color: var(--background);
    margin: 30px;
    border-radius: 20px;
}

.container form .product-information h2 {
    margin: 20px;
    color: var(--text-primary);
}

.container form .product-information {
    display: flex;
    flex-direction: column;
    padding-bottom: 30px;
}

.container form .product-information label {
    margin: 0px 20px 20px 20px;
}

.container form .product-information .input-proudct {
    height: 70px;
    border-radius: 15px;
    background-color: var(--background);
    border: 2px solid var(--input-border);
    padding: 20px;
    margin: 0px 20px 0px 20px;
    color: var(--text-primary);
}

.container form .product-information .input-proudct:focus {
    outline: none;
    border-color: var(--accent);
}
.container form .product-information .ai {
position: relative;
}
.container form .product-information .ai textarea {
    overflow: auto;
    padding: 10px;
    height: 150px;
    resize: vertical;
width: 95%;
}
.container form .product-information .ai .ai-btn {
position: absolute;
background-color: var(--accent);
border-radius: 15px;
right: 10%;
top: 0;
margin-top: 10px;
cursor: pointer; 
}
.container form #same {
    display: flex;
    flex-direction: column;
    margin-top: 20px;
}

.container form select {
    color: var(--text-primary);
}

.container form .Seller-Contact-Information {
    background-color: var(--background);
    margin: 20px;
    border-radius: 15px;
    padding: 10px 0 40px 0;
}

.container form .Seller-Contact-Information h3 {
    margin: 20px;
    color: var(--text-primary);
}

.container form .Seller-Contact-Information label {
    margin: 0px 20px 20px 20px;
}

.container form .Seller-Contact-Information .input-proudct {
    height: 60px;
    border-radius: 15px;
    background-color: var(--background);
    border: 2px solid var(--input-border);
    padding: 20px;
    margin: 0px 20px 0px 20px;
    color: var(--text-primary);
}

.container form .Seller-Contact-Information .input-proudct:focus {
    outline: none;
    border-color: var(--accent);
}

.container form .submit-btn {
    width: 90%;
    margin: 30px;
    align-self: center;
    cursor: pointer;
transition: .5s;
}

.remove-image-btn{
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    border-radius: 50%;
    border: none;
    width: 24px;
    height: 24px;
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
}

.container form .submit-btn:hover {
    transform: translateY(-5px);
     background-color: var(--accent-hover);
}

@media (max-width:767px) {
    .container {
        margin: 100px 20px;
    }

    .container form .imgs .addimg {
        grid-template-columns: 1fr 1fr;
    }
}

